objects/Channel_Partner_Authorization__c.object
<CustomObject>
    <description>R7A - THis Object is brought in to support the Authorization process of Partners to be published on abb.com</description>
    <fields>
        <fullName>ABB_visual_identity_rules__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that ABB branding rules known and used in marketing</inlineHelpText>
        <label>ABB Branding Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVP_Approver_comments__c</fullName>
        <label>AVP Approver comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVP_Valid_Until__c</fullName>
        <formula>IF (NOT(ISNULL(Channel_Agreement_end_date__c)) &amp;&amp; ISNULL(Authorization_Audit_End_Date__c), Channel_Agreement_end_date__c, 
	IF (NOT(ISNULL(Authorization_Audit_End_Date__c)) &amp;&amp; ISNULL(Channel_Agreement_end_date__c), Authorization_Audit_End_Date__c, 
	IF (Channel_Agreement_end_date__c &lt; Authorization_Audit_End_Date__c, Channel_Agreement_end_date__c, 
	IF (Authorization_Audit_End_Date__c &lt; Channel_Agreement_end_date__c, Authorization_Audit_End_Date__c,
        IF (Authorization_Audit_End_Date__c = Channel_Agreement_end_date__c, Channel_Agreement_end_date__c,
        NULL)))))</formula>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVP_activated__c</fullName>
        <inlineHelpText>Add date after the scanned Trademark Licence Agreement is attached. Company becomes visible in www.abb.com as ABB authorized value provider.</inlineHelpText>
        <label>AVP activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>SFDC-4190 - Account GUID</description>
        <formula>Account__r.GUID__c</formula>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partner Authorizations</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publishing on abb.com active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreed_Process_for_people_changing_jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Agreed process to ensure that ABB gets knowledge ASAP if people connected to ABB busienss are changing jobs</inlineHelpText>
        <label>Agreed Process for people changing jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_concept_negotiations_started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement concept negotiations started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Local_Information_provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Local Information provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_documents_Signed_and_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All required documents, according to your BU&apos;s process, is Singed and uploaded as attachments to this record.</inlineHelpText>
        <label>All documents Signed and Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Progress__c</fullName>
        <inlineHelpText>Shows where in the approval flow the authorization is. The possible statuses in this field vary depending on the type of authorization</inlineHelpText>
        <label>Approval Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In primary approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In secondary approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Re-Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initially approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved w/o publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_check_list__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach checklist below and check this box once done</inlineHelpText>
        <label>Approval check list completed / attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Audit_Process_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to trigger the requirement for an audit process on Step 5 below.</inlineHelpText>
        <label>Audit Process Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorizaiton_package_sent__c</fullName>
        <label>Authorizaiton package sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Audit_End_Date__c</fullName>
        <inlineHelpText>The autorization/audit expiry date.  For AVP/Strategic authorizations this can only be modified by BU responsible person</inlineHelpText>
        <label>Authorization/Audit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Audit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R7A - Authorization/Audit Owner</description>
        <inlineHelpText>By default set as the record owner. Update if needed. This person will receive reminders when authorization is about to expire.</inlineHelpText>
        <label>Authorization/Audit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Partner_Authorizations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Notes__c</fullName>
        <inlineHelpText>Add any additional notes here</inlineHelpText>
        <label>Authorization Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Auto-generated number</inlineHelpText>
        <label>Authorization Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Authorization_Review_Date__c</fullName>
        <label>Authorization Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Start_Date__c</fullName>
        <label>Authorization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Status__c</fullName>
        <description>R7A - Channel Authorization</description>
        <inlineHelpText>Shows the current step in the approval process</inlineHelpText>
        <label>Authorization Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Step 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_activated__c</fullName>
        <inlineHelpText>The date of activation. For AVP/Strategic authorizations this can only be modified by BU responsible person</inlineHelpText>
        <label>Authorization/Audit activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_expiry_Date__c</fullName>
        <label>Authorization expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BU_specific_additional_material_sent__c</fullName>
        <label>BU specific additional material sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Common business plan agreed and up-to-date with agreed follow-up process and frequency. Ensure correct template, status and focus.</inlineHelpText>
        <label>Business Plan Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Plan_impact__c</fullName>
        <defaultValue>$Label.Business_Plan_Impact_Default_Value</defaultValue>
        <description>“BR 4528 to remind user of having Business plan”</description>
        <label>Business Plan impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Plan_notes__c</fullName>
        <label>Business Plan notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Units_Covered__c</fullName>
        <globalPicklist>Business_Unit</globalPicklist>
        <label>BUs covered</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_as_Usual__c</fullName>
        <defaultValue>$Label.Business_as_Usual_Default_Value</defaultValue>
        <description>R7A - Channel Authorization Static Text</description>
        <label>Business as Usual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_planning_started__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when business planning is started with the partner</inlineHelpText>
        <label>Business planning started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_1_single__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Category 1 single</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_2_multi__c</fullName>
        <label>Category 2 multi</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category_3_Text__c</fullName>
        <label>Category 3 Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Signature_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick the first signatory for the certificate</inlineHelpText>
        <label>Certificate Signature 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Partner_Authorizations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_Signature_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick the second signatory for the certificate</inlineHelpText>
        <label>Certificate Signature 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Partner_Authorizations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <description>R7A - Channel Authorization</description>
        <label>Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_Notes__c</fullName>
        <inlineHelpText>Add any additional notes here</inlineHelpText>
        <label>Channel Agreement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>By default set as the record owner. The ABB person responsible for the agreement, and the one to receive a notification when it is about to expire.</inlineHelpText>
        <label>Channel Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_Start_Date__c</fullName>
        <label>Channel Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_attached_below__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Channel agreement been signed,  file scanned, and attached to this record</inlineHelpText>
        <label>Channel Agreement attached below</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Agreement created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_end_date__c</fullName>
        <inlineHelpText>Renewal reminders to agreement owner are based on the date given here</inlineHelpText>
        <label>Channel Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Agreement_open_ended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the agreement does not have a end date. In that case, please set the end date to 10 years into the future</inlineHelpText>
        <label>Channel Agreement open ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Business_Plan_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Business Plan Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>R7A - Channel Class</description>
        <inlineHelpText>The Channel Class(es) that the authorization covers</inlineHelpText>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Distributor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Engineer_Training_executed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please mark this Checkbox once the Engineers have been Trained accordingly.</inlineHelpText>
        <label>Channel Engineer Training executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Channel_Partner_Market_Scope__c</field>
                <operation>equals</operation>
                <valueField>Joint_Business_Plan__c.Channel_Market_Coverage__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Authorizations</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Review_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Partner Business Review complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Market_Scope__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel Partner Market Scope</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Channel_Market_Coverage__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Channel_Market_Coverage__c</referenceTo>
        <relationshipLabel>Channel Partner Authorizations</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Pre_Qualification_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A Channel Partner Pre-Qualification has been completed for the relevant business scope</inlineHelpText>
        <label>Channel Pre-Qualification completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Training_executed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this checkbox once the Training of Channel Personnel has been executed.</inlineHelpText>
        <label>Channel Training executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_operation_concept_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-operation concept attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_operation_program_presented__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark when relevant co-operation program material is presented to the partner candidate</inlineHelpText>
        <label>Co-operation program presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Of_Conduct__c</fullName>
        <formula>Account__r.Code_of_Conduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ABB CoC document presented and discussed. If no local contract is signed document that the policy is discussed. Field to be activated in the Channel Partner Common Data section on the Account record.</inlineHelpText>
        <label>Code-Of-Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_of_conduct_followed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Code-of-conduct communicated to the whole relevant personnel and principles followed in operations</inlineHelpText>
        <label>Code-of-conduct followed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <description>R7A - Channel Authorization Migration</description>
        <inlineHelpText>The account&apos;s official ID number as used in goverentment registries. (For example CRN, VAT, GST number depending on the country)</inlineHelpText>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_contacts_in_SFDC_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Persons indicated are still working for the partner, no new persons to get training/ tool access</inlineHelpText>
        <label>Company contacts in SFDC up-to-date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_of_Correspondence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R7A - Channel Auhtorization</description>
        <inlineHelpText>If contracts etc. should be sent to a branch different from the main account, or to an ABB office, then update this field, and the address below.</inlineHelpText>
        <label>Company of Correspondence</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partner Authorizations (Company of Correspondence)</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_onsite_Audit_Prototype_Review__c</fullName>
        <inlineHelpText>Depending on program, audit and prototype review executed on partner site</inlineHelpText>
        <label>Completed onsite Audit/Prototype Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_onsite_audit_check_list__c</fullName>
        <inlineHelpText>Add URL to document</inlineHelpText>
        <label>Completed onsite audit check list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_followed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confidentiality  rules communicated to all persons working with ABB products</inlineHelpText>
        <label>Confidentiality followed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_the_targeted_authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check Products -list below</inlineHelpText>
        <label>Confirm the targeted authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_for_Correspondence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact for Correspondence</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Channel Partner Authorizations</relationshipLabel>
        <relationshipName>Channel_Partner_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Continous_monitoring_and_review_of_qual__c</fullName>
        <defaultValue>$Label.Continuous_monitoring_Default_Value</defaultValue>
        <inlineHelpText>Complete business reviews against the active busienss plan</inlineHelpText>
        <label>Continuous monitoring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Templates_Approved_in_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ABB legal in the country has approved the contracts to be signed by ABB and Partner</inlineHelpText>
        <label>Contract Templates Approved in Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Public_Requested_Products__c</fullName>
        <label>Count of Requested Products</label>
        <summaryForeignKey>Authorization_Product_Line__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Public_Status_Approved_Products__c</fullName>
        <label>Count of Public Status Approved Products</label>
        <summaryFilterItems>
            <field>Authorization_Product_Line__c.Public_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Authorization_Product_Line__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R7A</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_strategy__c</fullName>
        <label>Development strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Covered__c</fullName>
        <globalPicklist>Division</globalPicklist>
        <label>Division</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Due diligence done according to country practises. Remember to involve all relevant persons, including legal person.</inlineHelpText>
        <label>Due Diligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Period_Business_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>An End Period Business Review has been completed for the relevant business scope</inlineHelpText>
        <label>End Period Business Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Onsite_Audit_Count__c</fullName>
        <label>Engineering Onsite Audit Count</label>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Engineering</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Channel_Partner_on_site_Audit__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Channel_Partner_on_site_Audit__c.Channel_Partner_Authorization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <formula>IF(Engineering_Onsite_Audit_Count__c &lt;= 0 &amp;&amp;  Is_Engg_required_to_initiate_Approval__c ,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Audit</label>
        <type>Text</type>
    </fields>
</CustomObject>